# neo4j-orchestration-framework

./: .gitignore  CHANGELOG.md  LICENSE  QUERYTYPE_REFACTOR_ANALYSIS.md  README.md  README.md.backup  README_OLD.md  SUBSTACK_READINESS.md  TESTING_SUMMARY.md  TODO.md  WEEK3_SESSION1_IMPROVEMENTS.md  WEEK3_SESSION2_SUMMARY.md  WEEK4_SESSION1_SUMMARY.md  WEEK4_SESSION2_PLAN.md  WEEK4_SESSION2_SUMMARY.md  WEEK4_SESSION3_COMPLETE.md  WEEK4_SESSION3_STEP3_PLAN.md  WEEK4_SESSION3_SUMMARY.md  WEEK5_SESSION1_PLAN.md  WEEK5_SESSION1_SUMMARY.md  WEEK5_SESSION2_SUMMARY.md  check_erkg_schema.py  demo_generator.py  pyproject.toml  requirements.txt  test_blast_radius.py  test_erkg_advanced.py  test_erkg_interactive.py  test_generic_operations.py
demos/: README.md  quick_start.py  week3_complete_pipeline.py
docs/: ARCHITECTURE.md  QUICK_START.md  RISK_GRAPH_SCHEMA.md  WEEK1_COMPLETION.md  WEEK2_COMPLETION_REPORT.md  WEEK2_SESSION1_SUMMARY.md  WEEK2_SESSION2_SUMMARY.md  WEEK2_SESSION3_SUMMARY.md  WEEK2_SESSION4_SUMMARY.md  WEEK3_COMPLETION_REPORT.md  WEEK3_SESSION2_COMPLETE.md  WEEK3_SESSION3_SUMMARY.md
docs/week3/: SESSION1_SUMMARY.md  WEEK3_PLAN.md
src/neo4j_orchestration/core/: exceptions.py  types.py
src/neo4j_orchestration/execution/: __init__.py  config.py  executor.py  result.py
src/neo4j_orchestration/memory/: __init__.py  base.py  episodic.py  manager.py  query_patterns.py  semantic.py  working.py
src/neo4j_orchestration/orchestration/: __init__.py  config.py  context.py  context_classifier.py  history.py  orchestrator.py  pattern_classifier.py  preferences.py
src/neo4j_orchestration/planning/: __init__.py  classifier.py  generator.py  intent.py
src/neo4j_orchestration/utils/: __init__.py  cypher.py  logging.py  validation.py
tests/: conftest.py
tests/fixtures/: sample_queries.json
tests/integration/: test_planning_integration.py
tests/integration/execution/: __init__.py  test_execution_integration.py
tests/integration/orchestration/: README.md  test_orchestration_integration.py  test_pattern_learning_integration.py
tests/unit/: test_core_types.py  test_episodic_memory.py  test_exceptions.py  test_memory_manager.py  test_semantic_memory.py  test_working_memory.py
tests/unit/execution/: test_config.py  test_executor.py  test_result.py
tests/unit/memory/: test_query_patterns.py
tests/unit/orchestration/: test_config.py  test_context.py  test_context_classifier.py  test_history.py  test_orchestrator.py  test_pattern_classifier.py  test_preferences.py
tests/unit/planning/: test_classifier.py  test_generator.py  test_generator_coverage.py  test_intent.py
